Needs biopython to pass tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ python:
   - "3.4"
 # command to install dependencies
 # install: "pip install -r requirements.txt"
+ - "pip install numpy"
+ - "pip install Biopython"
+
 # command to run tests
-script: nosetests
+script: python -m unittest discover
