Correct setup, blast2sam as script

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = MinVar
 author = Osvaldo Zagordi
 author-email = firstname.lastname@gmail.com
 summary = Minority variants in HIV
-description-file = README.MD
+description-file = README.md
 home-page = https://git.io/minvar
 license = Custom
 keywords =
@@ -33,3 +33,5 @@ data_files =
 [entry_points]
 console_scripts =
     minvar = minvar.__main__:main
+scripts =
+    blast2sam = minvar.blast2sam
