--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,6 @@ ignore =
     # E128: continuation line under-indented for visual indent
     # E127,E128
 max_complexity = 10
+
+[tool:pytest]
+addopts = --verbose
