Add meta description for SEO

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,8 @@
 ---
 title: MinVar
 tagline: a virus genotyping tool
+author: Osvaldo Zagordi
+description: Diagnostic software to detect and annotate drug resistance mutations in HIV-1 and HCV from NGS data and produce a report for clinicians.
 ---
 
 baseurl: /MinVar
